# GeneralDeepLearning_Infer

./: .gitattributes  CMakeLists.txt  DemoVersionInfo.aps  DemoVersionInfo.rc  DemoVersionInfo.rc.in  README.md
Demo/Header/: UtilsFunction.h
Demo/Impl/: Demo.cpp  UtilsFunction.cpp
Example/Onnx/UNet/: Reference.txt  grfb_unet.onnx
Example/Onnx/YOLO/: yolov5s-seg.onnx  yolov5s.onnx  yolov7_640x640.onnx  yolov8n-pose.onnx  yolov8n-seg-v1.onnx  yolov8n.onnx  yolov8n.transd.onnx
Modules/GeneralOnnxRuntime_Infer/: CMakeLists.txt  OnnxInferVersionInfo.aps  OnnxInferVersionInfo.rc
Modules/GeneralOnnxRuntime_Infer/Header/: GeneralOnnxBase.h  GeneralOnnxLog.h  GeneralOnnxUNet.h  GeneralOnnxUtils.h  GeneralOnnxYOLO.h  StructNameDefines.h
Modules/GeneralOnnxRuntime_Infer/Impl/: GeneralOnnxBase.cpp  GeneralOnnxLog.cpp  GeneralOnnxUNet.cpp  GeneralOnnxUtils.cpp  GeneralOnnxYOLO.cpp
Release/lib/: GeneralOnnxRuntime_Infer.exp  GeneralOnnxRuntime_Infer.lib
